feat(server-express): read TaskList API (#27)
* Define TaskList model

* Add unit tests for TaskList model

* Add ColorSpecification

* Implement TaskList model

* Add TaskList to Open API spec

* Implement repository

* Create domain service

* Implement API middleware

* Refactor get single Task
